Bug #2726 Incorrect size of dropdown menu Bug #2826 Style issue in gap match
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@21208 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/scss/qti/_gap-match.scss
+++ b/views/scss/qti/_gap-match.scss
@@ -9,6 +9,7 @@
             @extend %selectableHover;
         }
         background: $uiClickableDefaultBg;
+        color: $textColor;
         @include border-radius();
         position: relative;
         top: 4px;
